[gd_scene load_steps=3 format=3 uid="uid://c1uxp84cy3fxb"]

[ext_resource type="Script" uid="uid://bkh8t4oy0bii8" path="res://ui/settings.gd" id="1"]
[ext_resource type="Theme" uid="uid://dxlqjk13q05vx" path="res://ui_theme.tres" id="1_u0wmf"]

[node name="Settings" type="VBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -306.0
offset_top = -185.0
offset_right = 306.0
offset_bottom = 185.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_u0wmf")
script = ExtResource("1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="LeftContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SensitivityLabel" type="Label" parent="HBoxContainer/LeftContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Mouse Sensitivity: 0.50"

[node name="SensitivitySlider" type="HSlider" parent="HBoxContainer/LeftContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.05
max_value = 1.0
step = 0.05
value = 0.1

[node name="DrawDistanceLabel" type="Label" parent="HBoxContainer/LeftContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Draw Distance: 500"

[node name="DrawDistanceSlider" type="HSlider" parent="HBoxContainer/LeftContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 100.0
max_value = 500.0
value = 100.0

[node name="GrassLabel" type="Label" parent="HBoxContainer/LeftContainer"]
layout_mode = 2
text = "Grass:"

[node name="GrassOptionButton" type="OptionButton" parent="HBoxContainer/LeftContainer"]
unique_name_in_owner = true
layout_mode = 2
item_count = 2
popup/item_0/text = "Enabled"
popup/item_1/text = "Disabled"
popup/item_1/id = 1

[node name="RightContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MusicVolumeLabel" type="Label" parent="HBoxContainer/RightContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Music Volume: 100"

[node name="MusicVolumeSlider" type="HSlider" parent="HBoxContainer/RightContainer"]
unique_name_in_owner = true
layout_mode = 2
value = 100.0

[node name="SoundVolumeLabel" type="Label" parent="HBoxContainer/RightContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Sound Volume: 100"

[node name="SoundVolumeSlider" type="HSlider" parent="HBoxContainer/RightContainer"]
unique_name_in_owner = true
layout_mode = 2
value = 100.0

[node name="MapLabel" type="Label" parent="HBoxContainer/RightContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Map:"

[node name="MapOptionButton" type="OptionButton" parent="HBoxContainer/RightContainer"]
unique_name_in_owner = true
layout_mode = 2
item_count = 4
popup/item_0/text = "hub_1"
popup/item_1/text = "avocado_beach"
popup/item_1/id = 1
popup/item_2/text = "lake_map"
popup/item_2/id = 2
popup/item_3/text = "ball_minigame_1"
popup/item_3/id = 3

[node name="ToggleFullscreenButton" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Toggle Fullscreen"

[node name="ResetButton" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Reset to Defaults"

[node name="BackButton" type="Button" parent="."]
layout_mode = 2
text = "Back"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
size = Vector2i(500, 140)
min_size = Vector2i(500, 140)
dialog_text = "Are you sure you want to reset the settings to their default values?"
dialog_autowrap = true

[connection signal="value_changed" from="HBoxContainer/LeftContainer/SensitivitySlider" to="." method="_on_SensitivitySlider_value_changed"]
[connection signal="value_changed" from="HBoxContainer/LeftContainer/DrawDistanceSlider" to="." method="_on_DrawDistanceSlider_value_changed"]
[connection signal="item_selected" from="HBoxContainer/LeftContainer/GrassOptionButton" to="." method="_on_GrassOptionButton_item_selected"]
[connection signal="value_changed" from="HBoxContainer/RightContainer/MusicVolumeSlider" to="." method="_on_MusicVolumeSlider_value_changed"]
[connection signal="value_changed" from="HBoxContainer/RightContainer/SoundVolumeSlider" to="." method="_on_SoundVolumeSlider_value_changed"]
[connection signal="item_selected" from="HBoxContainer/RightContainer/MapOptionButton" to="." method="_on_MapOptionButton_item_selected"]
[connection signal="pressed" from="ToggleFullscreenButton" to="." method="_on_ToggleFullscreenButton_pressed"]
[connection signal="pressed" from="ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
